# subtitles_anywhere

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/osutils/: OSUtils.h  OSUtilsBase.cpp  OSUtilsBase.h
src/gui/osutils/winutils/: WinUtils.cpp  WinUtils.h
